--- a/venta_principal.ui
+++ b/venta_principal.ui
@@ -81,16 +81,16 @@
          </rect>
         </property>
         <property name="frameShape">
-         <enum>QFrame::Panel</enum>
+         <enum>QFrame::Box</enum>
         </property>
         <property name="frameShadow">
-         <enum>QFrame::Raised</enum>
+         <enum>QFrame::Plain</enum>
         </property>
         <property name="lineWidth">
-         <number>6</number>
+         <number>3</number>
         </property>
         <property name="midLineWidth">
-         <number>4</number>
+         <number>3</number>
         </property>
         <layout class="QGridLayout" name="gridLayout_2">
          <item row="0" column="0">
@@ -279,7 +279,7 @@
     <property name="title">
      <string>Ayuda</string>
     </property>
-    <addaction name="actionAcerca_de"/>
+    <addaction name="actAcerca_de"/>
    </widget>
    <addaction name="menuArchivo"/>
    <addaction name="menuHelp"/>
@@ -289,7 +289,7 @@
     <string>Salir</string>
    </property>
   </action>
-  <action name="actionAcerca_de">
+  <action name="actAcerca_de">
    <property name="text">
     <string>Acerca de...</string>
    </property>
