--- a/venta_principal.ui
+++ b/venta_principal.ui
@@ -39,7 +39,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>../../Documents/Desenvolvemento Interfaces/imagenes/travel_car_BMV_1741.png</normaloff>../../Documents/Desenvolvemento Interfaces/imagenes/travel_car_BMV_1741.png</iconset>
+    <normaloff>IMG/travel_car_BMV_1741.png</normaloff>IMG/travel_car_BMV_1741.png</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="sizePolicy">
@@ -219,7 +219,7 @@
          </property>
          <property name="icon">
           <iconset>
-           <normaloff>../../Documents/Desenvolvemento Interfaces/imagenes/descarga_calendario.png</normaloff>../../Documents/Desenvolvemento Interfaces/imagenes/descarga_calendario.png</iconset>
+           <normaloff>IMG/descarga_calendario.png</normaloff>IMG/descarga_calendario.png</iconset>
          </property>
         </widget>
         <widget class="QLabel" name="lblApellido">
@@ -627,7 +627,8 @@
   <action name="actionbarSalir">
    <property name="icon">
     <iconset>
-     <normaloff>../../Documents/Desenvolvemento Interfaces/imagenes/imagen_salir.png</normaloff>../../Documents/Desenvolvemento Interfaces/imagenes/imagen_salir.png</iconset>
+     <normaloff>../../.designer/backup/IMG/imagen_salir.png</normaloff>
+     <normalon>IMG/imagen_salir.png</normalon>../../.designer/backup/IMG/imagen_salir.png</iconset>
    </property>
    <property name="text">
     <string>barSalir</string>
@@ -636,7 +637,8 @@
   <action name="actionlimpiarPanel">
    <property name="icon">
     <iconset>
-     <normaloff>../../Documents/Desenvolvemento Interfaces/imagenes/reload.png</normaloff>../../Documents/Desenvolvemento Interfaces/imagenes/reload.png</iconset>
+     <normaloff>../../.designer/backup/IMG/reload.png</normaloff>
+     <normalon>IMG/reload.png</normalon>../../.designer/backup/IMG/reload.png</iconset>
    </property>
    <property name="text">
     <string>limpiarPanel</string>
