--- a/ventana_salir.ui
+++ b/ventana_salir.ui
@@ -25,6 +25,10 @@
   <property name="windowTitle">
    <string>Salir</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>IMG/travel_car_BMV_1741.png</normaloff>IMG/travel_car_BMV_1741.png</iconset>
+  </property>
   <property name="sizeGripEnabled">
    <bool>true</bool>
   </property>
@@ -89,7 +93,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>../../Documents/Desenvolvemento Interfaces/imagenes/imagen_salir.png</pixmap>
+    <pixmap>IMG/imagen_salir.png</pixmap>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
