añadiendo tabla con contenido

--- a/ventana_acercade.ui
+++ b/ventana_acercade.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Acerca de...</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>IMG/travel_car_BMV_1741.png</normaloff>IMG/travel_car_BMV_1741.png</iconset>
+  </property>
   <widget class="QFrame" name="frame">
    <property name="geometry">
     <rect>
@@ -42,9 +46,6 @@
     </property>
     <property name="pixmap">
      <pixmap>../../Documents/Desenvolvemento Interfaces/imagenes/travel_car_BMV_1741.png</pixmap>
-    </property>
-    <property name="scaledContents">
-     <bool>true</bool>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
