--- a/venta_principal.ui
+++ b/venta_principal.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
@@ -24,8 +24,8 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>1024</width>
-    <height>1200</height>
+    <width>160000</width>
+    <height>160000</height>
    </size>
   </property>
   <property name="font">
@@ -50,21 +50,21 @@
    </property>
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
-     <widget class="QTabWidget" name="tabPrincipal">
+     <widget class="QTabWidget" name="panelPrincipal">
       <property name="currentIndex">
        <number>0</number>
       </property>
-      <widget class="QWidget" name="tabDrivers">
+      <widget class="QWidget" name="panelDrivers">
        <attribute name="title">
         <string>CONDUCTORES</string>
        </attribute>
        <widget class="QFrame" name="frame">
         <property name="geometry">
          <rect>
-          <x>20</x>
+          <x>10</x>
           <y>10</y>
-          <width>951</width>
-          <height>201</height>
+          <width>981</width>
+          <height>251</height>
          </rect>
         </property>
         <property name="frameShape">
@@ -332,7 +332,7 @@
         <widget class="QLabel" name="lblDireccion">
          <property name="geometry">
           <rect>
-           <x>20</x>
+           <x>10</x>
            <y>90</y>
            <width>60</width>
            <height>20</height>
@@ -667,6 +667,12 @@
          <property name="text">
           <string>Todos</string>
          </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+         <attribute name="buttonGroup">
+          <string notr="true">buttonGroup</string>
+         </attribute>
         </widget>
         <widget class="QRadioButton" name="rbtAlta">
          <property name="geometry">
@@ -680,6 +686,9 @@
          <property name="text">
           <string>Alta</string>
          </property>
+         <attribute name="buttonGroup">
+          <string notr="true">buttonGroup</string>
+         </attribute>
         </widget>
         <widget class="QRadioButton" name="rbtBaja">
          <property name="geometry">
@@ -693,7 +702,110 @@
          <property name="text">
           <string>Baja</string>
          </property>
+         <attribute name="buttonGroup">
+          <string notr="true">buttonGroup</string>
+         </attribute>
         </widget>
+        <widget class="QPushButton" name="btnAltaDriver">
+         <property name="geometry">
+          <rect>
+           <x>270</x>
+           <y>220</y>
+           <width>75</width>
+           <height>23</height>
+          </rect>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>75</width>
+           <height>20</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>Alta</string>
+         </property>
+        </widget>
+        <widget class="QPushButton" name="btnModifDriver">
+         <property name="geometry">
+          <rect>
+           <x>380</x>
+           <y>220</y>
+           <width>75</width>
+           <height>23</height>
+          </rect>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>75</width>
+           <height>20</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>Modificar</string>
+         </property>
+        </widget>
+        <widget class="QPushButton" name="btnBajaDriver">
+         <property name="geometry">
+          <rect>
+           <x>500</x>
+           <y>220</y>
+           <width>75</width>
+           <height>23</height>
+          </rect>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>75</width>
+           <height>20</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>Baja</string>
+         </property>
+        </widget>
+       </widget>
+       <widget class="QTableWidget" name="tabDrivers">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>270</y>
+          <width>981</width>
+          <height>381</height>
+         </rect>
+        </property>
+        <attribute name="verticalHeaderVisible">
+         <bool>false</bool>
+        </attribute>
+        <column>
+         <property name="text">
+          <string>Codigo</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Apellidos</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Nombre</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Móvil</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Licencias</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Fecha Baja</string>
+         </property>
+        </column>
        </widget>
       </widget>
       <widget class="QWidget" name="tab_Principal">
@@ -729,7 +841,7 @@
      <x>0</x>
      <y>0</y>
      <width>1024</width>
-     <height>26</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuArchivo">
@@ -812,4 +924,7 @@
  </tabstops>
  <resources/>
  <connections/>
+ <buttongroups>
+  <buttongroup name="buttonGroup"/>
+ </buttongroups>
 </ui>
